# bean

./: .gitignore  CMakeLists.txt  PreLoad.cmake  README.md
Analysis/AbsCor/: CMakeLists.txt  version.txt
Analysis/AbsCor/AbsCor/: AbsCor.h
Analysis/AbsCor/dat/: hotcry.txt
Analysis/AbsCor/dat/00-00-28/: c3p.txt  c3ptof.txt
Analysis/AbsCor/dat/00-00-36/: c3p.txt  c3ptof.txt  evset.txt  evsetTof.txt
Analysis/AbsCor/dat/00-00-41/: c3ptof.txt  c3ptof2009Jpsi.txt  c3ptof2010psipp.txt  c3ptof2011psipp.txt  c3ptof2012Jpsi.txt  c3ptof2018Jpsi.txt  c3ptof2019Jpsi.txt  c3ptof2021psip.txt  c3ptof2022psipp.txt  c3ptof2023psipp.txt  c3ptof2024psipp.txt  evset.txt  evsetCorFunctionPar.txt  evsetTof.txt  evsetTofCorFunctionPar.txt  evsetTofCorFunctionPar2009Jpsi.txt  evsetTofCorFunctionPar2010psipp.conf  evsetTofCorFunctionPar2011psipp.conf  evsetTofCorFunctionPar2012Jpsi.txt  evsetTofCorFunctionPar2018Jpsi.txt  evsetTofCorFunctionPar2019Jpsi.txt  evsetTofCorFunctionPar2021psip.txt  evsetTofCorFunctionPar2022psipp.conf  evsetTofCorFunctionPar2023psipp.conf  evsetTofCorFunctionPar2024psipp.conf
Analysis/AbsCor/src/: AbsCor.cxx
Analysis/DatabaseSvc/: CMakeLists.txt  version.txt
Analysis/DatabaseSvc/DatabaseSvc/: DatabaseRecord.h
Analysis/DatabaseSvc/dat/: db.timestamp
Analysis/DatabaseSvc/share/: dbupdate.py  dbupdate2.py
Analysis/DatabaseSvc/src/: DatabaseSvc.cxx
Analysis/EventTag/: CMakeLists.txt  readme
Analysis/EventTag/EventTag/: DecayTable.h  EventTagSvc.h
Analysis/EventTag/share/: ChangeLog  decay.codes  decayFSR.codes  jobOptions_EvenTagSvc.txt  jobOptions_FillEventTag.txt  pdt.table  pdt_bean.table
Analysis/EventTag/share/DecayCodes/: dcode_charmonium.txt  dcode_d.txt  dcode_dmesons.txt  dcode_jpsi.txt  dcode_non_charm.txt  psi2s.dec  psi3770.dec
Analysis/EventTag/src/: DecayTable.cxx  EventTagSvc.cxx
Analysis/Identifier/: CMakeLists.txt  ChangeLog
Analysis/Identifier/src/: Identifier.cxx
Analysis/Identifier/test/: main.cxx
Analysis/MagneticField/: CMakeLists.txt  ChangeLog
Analysis/MagneticField/MagneticField/: ConnectionDB.h  MagneticFieldSvc.h
Analysis/MagneticField/dat/: barAirpar.txt  barIronpar.txt  endAirpar.txt  endIronpar.txt
Analysis/MagneticField/src/: ConnectionDB.cxx  MagneticFieldSvc.cxx  MucMagneticField.cxx
Analysis/ParticleID/: CMakeLists.txt  ChangeLog
Analysis/ParticleID/ParticleID/: DedxPID.h
Analysis/ParticleID/share/: muon_emc_hist.txt  muon_muc_hist.txt  pion_emc_hist.txt  pion_muc_hist.txt
Analysis/ParticleID/share/JPsi/kaon/: dedx_kam.txt  dedx_kam_mc.txt  dedx_kap.txt  dedx_kap_theta_mc.txt
Analysis/ParticleID/share/JPsi/pion/: dedx_pim.txt  dedx_pim_theta.txt  dedx_pip_theta.txt  dedx_pip_theta_end.txt  dedx_pip_theta_end_mc.txt  dedx_pip_theta_mc.txt
Analysis/ParticleID/share/JPsi/proton/: dedx_protonm.txt  dedx_protonm_theta_mc.txt  dedx_protonp_theta_mc.txt
Analysis/ParticleID/share/Psip/kaon/: dedx_kam.txt  dedx_kam_mc.txt  dedx_kap_mc.txt
Analysis/ParticleID/share/Psip/pion/: dedx_pim.txt
Analysis/ParticleID/share/Psip/proton/: dedx_protonm.txt
Analysis/ParticleID/share/Psipp/kaon/: dedx_ka.txt  dedx_ka_mc.txt  dedx_ka_theta_mc.txt
Analysis/ParticleID/share/Psipp/pion/: dedx_pi.txt  dedx_pi_mc.txt  dedx_pi_theta.txt  dedx_pi_theta_mc.txt
Analysis/ParticleID/share/Psipp/proton/: dedx_proton_mc.txt  dedx_proton_theta.txt
Analysis/ParticleID/share/TofCorrPID/jpsi2009/data/: curve_Q0_BetaGamma.txt  parameter_sigma.txt
Analysis/ParticleID/share/TofCorrPID/jpsi2009/mc/: calib_barrel_common.txt  calib_barrel_sigma.txt  curve_Q0_BetaGamma.txt  parameter_sigma.txt  parameter_sigma_proton.txt
Analysis/ParticleID/share/TofCorrPID/jpsi2012/data/: calib_barrel_common.txt  calib_barrel_sigma.txt  calib_endcap_sigma.txt  curve_Q0_BetaGamma.txt  parameter_A_B.txt  parameter_A_B_kpi.txt  parameter_A_B_pip.txt  parameter_offset_proton.txt  parameter_sigma.txt  parameter_sigma_proton.txt
Analysis/ParticleID/share/TofCorrPID/jpsi2012/mc/: calib_barrel_common.txt  calib_barrel_sigma.txt  calib_endcap_sigma.txt  curve_Q0_BetaGamma.txt  parameter_A_B.txt  parameter_offset_proton.txt  (+2 more)
Analysis/ParticleID/share/TofEndcap/: tEndRes_-11414.txt  tEndRes_12398.txt  tEndRes_9947.txt
Analysis/ParticleID/share/pidparadedx/: dedxendcapdata.txt  dedxendcapmc.txt
Analysis/ParticleID/share/pidparatof/: tofendcapmc.txt
Analysis/ParticleID/src/: DedxPID.cxx  ParticleID.cxx  Tof2PID.cxx  TofCPID.cxx  TofCorrPID.cxx  TofEPID.cxx
Analysis/RscanDQ/: CMakeLists.txt  readme
Analysis/RscanDQ/RscanDQ/: RscanDQ.h
Analysis/RscanDQ/src/: RscanDQ.cxx
Analysis/TrackCorrection/: CMakeLists.txt  readme
Analysis/TrackCorrection/TrackCorrection/: TrackCorrection.h
Analysis/TrackCorrection/src/: TrackCorrection.cxx
Analysis/VertexFit/: CMakeLists.txt  ChangeLog
Analysis/VertexFit/VertexFit/: Helix.h  VertexDbSvc.h  VertexFit.h
Analysis/VertexFit/src/: Helix.cxx  VertexDbSvc.cxx  VertexFit.cxx  WTrackParameter.cxx
BeanCore/: BEmcTrack.cxx  BEmcTrack.h  BExtTrack.cxx  BExtTrack.h  BMdcKalTrack.cxx  BMdcKalTrack.h  BMdcTrack.cxx  BMdcTrack.h  BTofTrack.h  Bean.cxx  Bean.h  CMakeLists.txt  DstEvtRecTracks.cxx  DstEvtRecTracks.h  DstFormat.cxx  DstFormat.h  MasterInfoHack.cxx  MasterInfoHack.h  ReadDst.cxx  ReadDst.h  TMergeableMap.cxx  TMergeableMap.h  TofHitStatus.cxx  TofHitStatus.h  main.cxx  unix_cp.cxx  unix_cp.h
BeanUser/: Bhabha.cxx  CMakeLists.txt  DLLDefines.h  DelClonedTrks.cxx  DoubleDTag.cxx  EntryList.cxx  Eta_TwoPi.cxx  Etaetagamma.cxx  JobInfo.cxx  MagField.cxx  PipPimPi0Eta.cxx  PsipHelixParCor.cxx  PsipJpsiGammaEta.cxx  PsipJpsiPhiEta.cxx  PsipPiPiKK.cxx  RadBhabha.cxx  Rhopi.cxx  SelectJpsiX.cxx  SelectKKgg.cxx  SelectOmegaEta.cxx  SelectOmegapi0.cxx  Semileptonic.cxx  TestAbsCor.cxx  TestDb.cxx  TestEventTag.cxx  TestPID.cxx  User1.cxx  UserTest.cxx  mydecay.codes  mypsip_dec.codes
doc/OldStuff/PROOF/: BUILD_lib.sh  CMakeLists.txt  Proof_readme.md  SETUP_lib.C
doc/OldStuff/PROOF/Analysis_PROOF-INF/: BUILD.sh  SETUP.C
doc/OldStuff/PROOF/BeanUser_PROOF-INF/: BUILD.sh  SETUP.C
(+197 files in other folders)
